# stdf

./: .gitignore  Cargo.toml  Cargo.toml.backup  README.md  build.rs  build.rs.disabled2  cargo.tree  cbindgen.toml
.cargo/: config.toml
.github/workflows/: CI-CD.yml
cbindgen/: c.toml  cxx.toml  cython.toml
doc/: TODO.md
installers/Inno/: README.md
installers/bundle/: README.md
installers/choco/: README.md  stdf-r.nuspec
installers/choco/tools/: chocolateyInstall.ps1
installers/conda/: README.md
installers/deb/: README.md
installers/linux/makeself/: README.md  create_instller.sh
installers/linux/rpm/: README.md
installers/makeself/: README.md
installers/pip/: README.md
installers/windows/: README.md  installer.iss
installers/wix/: README.md
libs/x86/windows/: magic.lib
scripts/: create_header_files.ps1  create_header_files.rs  hello_world.rs  mrsv.rs  update_version.rs
src/: conversions.rs  counts.rs  lib.rs  records.rs  tally.rs  types.rs
tests/: stdf_count_records.rs  stdf_count_records.rs.disabled  stdf_endian.rs  stdf_endian.rs.disabled
tests/files/: .~lock.columns.xlsx#  HVCL_Temp_Test.txt  columns.xlsx  far+1.std  farmir.std  main_Lot_1_Jan_28_14h17m33s.stdf.7z  main_Lot_1_Jan_28_14h17m33s_STDF.PIR-PTR-PRR.txt  main_Lot_1_Jan_28_14h17m33s_STDF.PTR.txt  main_Lot_1_Jan_28_14h17m33s_STDF.stdf  v93k16_1_DDHASX31MNWM1502_408_P1S_H_301199002_01_220125_134750.std.7z  v93k74_1_IEHVCL1269PQA2Q_900_F2C_C_826969501_00_280125_172613.std.7z  v93k74_1_IEHVCL1269PQA2Q_900_F2C_C_826969501_00_280125_172613.std.xlsx  v93k74_1_IEHVCL1269PQA2Q_900_F2C_C_826969501_00_280125_172613_original.std  v93k74_1_IEHVCL1269PQA2Q_900_F2C_C_826969501_00_290125_104303.std  v93k74_1_IEHVCL1269PQA2Q_900_F2C_C_826969501_00_290125_104303.std.7z  v93k74_1_IEHVCL1269PQA2Q_900_F2C_C_826969501_00_290125_104303.std.xlsx
tests/fixtures/: diamond07_1_3855_rev_F3E_M_Default_01_07122011_155821.std.7z  diamond14_1_3855_rev_F3E_R_Default_01_21032012_132229.std.7z  diamond40_1_IDCTCA3147W_147_P1N_C_840138000_18_28012025_130556.std.7z  far.std  hatb_hw0_ft_device1_production_tp1.stdf  lot2.stdf.7z  v93k74_1_IEHVCL1269PQA2Q_900_F2C_C_826969501_00_280125_172613.std.xlsxtmp  v93k74_1_IEHVCL1269PQA2Q_900_F2C_C_826969501_00_290125_104303.std.xlsx
wix/: main.wxs
