[package]
name = "stdf"
version = "0.0.0"
authors = ["Casey Marshall <git@cmars.tech>", "Tom Hören <thor@Semi-ATE.com>"]
description = "Standard Test Data Format (STDF) serialization and data processing"
keywords = ["semiconductor", "test-equipment", "manufacturing"]
categories = ["parser-implementations", "encoding"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
byte = "0.2"
memmap = "0.7"
stdf-record-derive = {path="stdf-record-derive", version="0.2"}
clap = { version = "4.5", features = ["cargo"]}
indicatif = "0.17.9"
regex = "1.11"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.2"