[package]
name = "stdf"
version = "0.0.0"
authors = ["Casey Marshall <git@cmars.tech>", "Tom Hören <thor@Semi-ATE.com>"]
description = "Standard Test Data Format (STDF) serialization and data processing"
keywords = ["semiconductor", "test-equipment", "manufacturing"]
categories = ["parser-implementations", "encoding"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
byte = "0.2"
memmap = "0.7"
stdf-record-derive = {path="stdf-record-derive", version="0.2"}
clap = { version = "4.5", features = ["cargo"]}
indicatif = "0.17.11"
regex = "1.11"
chrono = "0.4"
ndarray = "0.16"

rust_xlsxwriter = "0.81.0"
npy = "0.4"
npy-derive = "0.4"

#sevenz-rust = "0.4"   # 7z compression/decompression
#zstd = "0.9"          # zstd compression/decompression
#lz4 = "1.0"           # lz4 compression/decompression
#flate2 = "1.0"        # gzip compression/decompression
#xz2 = "0.1"           # xz/lzma compression/decompression
#zip = "2.2"           # zip/zstd/bz2 compression/decompression

#atty = "0.2"          # detect if a cli tool is running in a terminal or in a script or redirected.
#filemagic = "0.13"    # detect file type

[dev-dependencies]
tempfile = "3.2"

[[bin]]
name = "hvcl_tc"
path = "src/bin/hvcl_tc.rs"