[package]
name = "stdf"
version = "0.0.0"
authors = ["Casey Marshall <git@cmars.tech>", "Tom Hören <thor@Semi-ATE.com>"]
description = "Standard Test Data Format (STDF) serialization and data processing"
keywords = ["semiconductor", "test-equipment", "manufacturing"]
categories = ["parser-implementations", "encoding"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
byte = "0.2"
memmap = "0.7"
stdf-record-derive = {path="stdf-record-derive", version="0.2"}
clap = { version = "4.5", features = ["cargo"]}
indicatif = "0.17.11"
time = { version = "0.3", features = ["formatting"] }
file-format = "0.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.138"
umya-spreadsheet = "2.2.2"

#atty = "0.2"          # detect if a cli tool is running in a terminal or in a script or redirected.

#regex = "1.11"
#ndarray = "0.16"
#polars = "0.46.0"

#npy = "0.4"
#npy-derive = "0.4"

#sevenz-rust = "0.4"   # 7z compression/decompression
#zstd = "0.9"          # zstd compression/decompression
#lz4 = "1.0"           # lz4 compression/decompression
#flate2 = "1.0"        # gzip compression/decompression
#xz2 = "0.1"           # xz/lzma compression/decompression
#zip = "2.2"           # zip/zstd/bz2 compression/decompression




[dev-dependencies]
tempfile = "3"
cargo-msrv = "0.17.1"
cargo-script = "0.2.8"

[[bin]]
name = "hvcl_tc"
path = "src/bin/hvcl_tc.rs"

[[bin]]
name = "stdf"
path = "src/bin/stdf.rs"

[package.metadata.deb]
maintainer = "Casey Marshall <git@cmars.tech>, Tom Hören <thor@Semi-ATE.com>"
depends = "libc6 (>= 2.27)"
license-file = ["LICENSE"]
assets = [
    ["target/release/hvcl_tc", "usr/bin/", "755"],
    ["target/release/stdf", "usr/bin/", "755"]
]

[package.metadata.wix]
# Optional metadata for the MSI package
description = "A brief description of your project"
homepage = "https://example.com"
license-file = ["LICENSE"]
